--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,16 @@ header{
 
 }
 .socials{
-    height: 100px;
-    width: 100px;
     background-color: #101010;
     font-size: 24px;
     display: flex;
     justify-content: space-evenly;
+    /* height: 100px;
+    width: 100px;
+    background-color: #101010;
+    font-size: 24px;
+    display: flex;
+    justify-content: space-evenly; */
 }
 .socials i{
     color: white;
