--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@
     text-decoration: none;
     font-family: 'Whisper', cursive;
 }
+body{
+    height: 200vh;
+    background-image: url("./images/Opus-Logo2.jpg");
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+
+
+}
 header{
     width: 100%;
     height: 80px;
